Eventos Inseridos, Inicio Usuarios

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="dev42.ironlife">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ico_app"
@@ -15,12 +17,14 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".activities.IntroActivity" />
         <activity android:name=".activities.EventoActivity" />
-        <activity android:name=".activities.AddEventoActivity"/>
+        <activity android:name=".activities.AddEventoActivity" />
+        <activity android:name=".activities.ViewEventoActivity"></activity>
     </application>
 
 </manifest>
