--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+
+    compile 'com.google.firebase:firebase-messaging:9.0.2'
 }
+apply plugin: 'com.google.gms.google-services'
