--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,32 @@
 apply plugin: 'com.android.application'
 
+def renameArtifact(variant, defaultConfig) {
+    variant.outputs.each { output ->
+        def formattedDate = new Date().format('yyyyMMddHHmmss')
+        def fullName = output.outputFile.name
+        def projectName = fullName.substring(0, fullName.indexOf('-'))
+        def apelido = 'IronLife'
+
+        output.outputFile = new File(
+                (String) output.outputFile.parent,
+                (String) output.outputFile.name.replace(projectName, "${apelido}-${defaultConfig.versionName}-${formattedDate}"))
+                //(String) output.outputFile.name.replace(projectName, "${projectName}-${defaultConfig.versionName}-${formattedDate}"))
+    }
+}
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
+
+    //include this line for your android applications
+    applicationVariants.all { variant -> renameArtifact(variant, defaultConfig) }
+
     defaultConfig {
         applicationId "dev42.ironlife"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
