--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,31 +21,36 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.IntroActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activities.EventoActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activities.AddEventoActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activities.ViewEventoActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activities.LoginPsnActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        <activity
+            android:name=".activities.IntroActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.EventoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.AddEventoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.ViewEventoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.LoginPsnActivity"
+            android:noHistory="true"
             android:screenOrientation="portrait"
-            android:noHistory="true">
-        </activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
         <service android:name=".services.IronLifeMessagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
         <service android:name=".services.IronLifeInstanceIDService">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
 
+        <activity android:name=".activities.TutorialYoutubeActivity"></activity>
     </application>
 
 </manifest>
