--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,14 +19,14 @@ android {
     buildToolsVersion "23.0.3"
 
     //include this line for your android applications
-    //applicationVariants.all { variant -> renameArtifact(variant, defaultConfig) }
+    applicationVariants.all { variant -> renameArtifact(variant, defaultConfig) }
 
     defaultConfig {
         applicationId "dev42.ironlife"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 4
-        versionName "1.3"
+        versionCode 5
+        versionName "1.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -47,6 +47,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
 
 
-    compile 'com.google.firebase:firebase-messaging:9.0.2'
+    compile 'com.google.firebase:firebase-messaging:9.6.1'
+    compile 'com.google.firebase:firebase-crash:9.6.1'
 }
 apply plugin: 'com.google.gms.google-services'
